--- a/index.html
+++ b/index.html
@@ -85,5 +85,42 @@
 
     </header>
 
+    <!-- Jumbotron -->
+    <Jumbotron>
+      <div class="contenitore-jumbotron">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-6">
+              <div class="text-left-jumbotron design">
+                <h1>The simplest cloud paltform fort developers & teams</h1>
+                <p>We make it simple to launch in the cloud and scale up as you grow – with an intuitive control panel, predictable pricing, team accounts, and more.We make it simple to launch in the cloud and scale up as you grow – with an intuitive control panel, predictable pricing, team accounts, and more.</p>
+
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+              <div class="text-right-jumbotron">
+                <h1>Deploy your app in seconds</h1>
+                <h2>Get started now.</h2>
+                <div class="padding-button-jumbotron">
+                  <form>
+                    <div class="form-group">
+                      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                    </div>
+
+                    <div class="form-group">
+                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    </div>
+                  </form>
+                  <button type="button" class="btn btn-primary btn-lg btn-block">Create your account</button>
+                  <button type="button" class="btn btn-default btn-lg btn-block"><img src="img/google-icon.png" alt="gogle">Sign up with google</button>
+                </div>
+                <p>By signing up you agree to the <a href="#">Terms of service</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </jumbotron>
+
   </body>
 </html>
