--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </header>
 
     <!-- Jumbotron -->
-    <Jumbotron>
+    <jumbotron>
       <div class="contenitore-jumbotron">
         <div class="container">
           <div class="row">
@@ -121,6 +121,66 @@
         </div>
       </div>
     </jumbotron>
+
+    <!-- main -->
+    <main>
+
+      <!-- main section1 -->
+      <div class="contenitore-main-section1">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <span>INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</span>
+
+            </div>
+
+          </div>
+
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-6 col-lg-2">
+              <img src="img/docker.svg" alt="docker">
+
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-2">
+              <img src="img/gitlab.svg" alt="gitlab">
+
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-2">
+              <img src="img/slack.svg" alt="slack">
+
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-2">
+              <img src="img/hashicorp.svg" alt="hashicorp">
+
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-2">
+              <img src="img/hashicorp.svg" alt="hashicorp">
+
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-2">
+              <img src="img/splunklogo.svg" alt="splunk">
+
+            </div>
+
+          </div>
+        </div>
+        <div class="contenitore main-section1">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <span><a href="#">View customer storie ></a></span>
+
+
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </main>
 
   </body>
 </html>
