--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
  </head>
   <body>
-    <header>
+    <header class="position-fixed">
       <nav class="navbar navbar-default">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
@@ -82,7 +82,6 @@
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
-
     </header>
 
     <!-- Jumbotron -->
@@ -139,27 +138,27 @@
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 col-md-6 col-lg-2">
+            <div class="col-xs-6 col-md-2">
               <img src="img/docker.svg" alt="docker">
 
             </div>
-            <div class="col-xs-12 col-md-6 col-lg-2">
+            <div class="col-xs-6 col-md-2">
               <img src="img/gitlab.svg" alt="gitlab">
 
             </div>
-            <div class="col-xs-12 col-md-6 col-lg-2">
+            <div class="col-xs-6 col-md-2">
               <img src="img/slack.svg" alt="slack">
 
             </div>
-            <div class="col-xs-12 col-md-6 col-lg-2">
+            <div class="col-xs-6 col-md-2">
               <img src="img/hashicorp.svg" alt="hashicorp">
 
             </div>
-            <div class="col-xs-12 col-md-6 col-lg-2">
+            <div class="col-xs-6 col-md-2">
               <img src="img/hashicorp.svg" alt="hashicorp">
 
             </div>
-            <div class="col-xs-12 col-md-6 col-lg-2">
+            <div class="col-xs-6 col-md-2">
               <img src="img/splunklogo.svg" alt="splunk">
 
             </div>
