--- a/index.html
+++ b/index.html
@@ -165,20 +165,95 @@
 
           </div>
         </div>
-        <div class="contenitore main-section1">
+        <div class="contenitore-main-section1">
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
                 <span><a href="#">View customer storie ></a></span>
-
-
               </div>
 
             </div>
-
           </div>
         </div>
       </div>
+
+
+      <!-- main section 2 -->
+       <div class="">
+         <div class="container">
+           <div class="row">
+             <div class="col-xs-12">
+               <div class="text-title-section2">
+                 <h2>Deploy and scale seamlessly</h2>
+                 <p>Our optimized configuration process saves your team time when running and scaling distributed applications, Al & machine learning workloads, hosted services, client websites, or CI/CD enviroments.</p>
+
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+
+       <div class="text-under-section2">
+         <div class="container">
+           <div class="row">
+             <div class=" col-xs-12 col-md-offset-1 col-md-3">
+               <div class="listato">
+                 <ul>
+                   <li><a href="#">Deploy</a></li>
+                   <li><a href="#">Manage</a></li>
+                   <li><a href="#">Secure</a></li>
+                   <li><a href="#">Scale</a></li>
+                   <li><a href="#">Monitor</a></li>
+                 </ul>
+               </div>
+
+             </div>
+              <div class="col-xs-12 col-md-8">
+               <div class="row">
+                 <div class="col-md-6">
+                   <div class="">
+                     <img src="img/cluster-deploy.svg" alt="cluster">
+                     <h3>Cluster deployments</h3>
+                     <p>Provision multiple Droplets(virtual machines) in seconds with our control panel, CLI, or directly against our API</p>
+
+
+                   </div>
+
+                 </div>
+                 <div class="col-md-6">
+                   <div class="">
+                     <img src="img/optimized-compute.svg" alt="compute">
+                     <h3>Flexible compute types</h3>
+                     <p>With Basic, General Purpose, CPU-Optimized or Memory-Optimized Droplets, you can choose the right infrastructure for your workload.</p>
+                   </div>
+                 </div>
+               </div>
+             </div>
+
+             <div class="col-xs-12 col-md-8">
+               <div class="row">
+                 <div class="col-md-6">
+                   <div class="">
+                     <img src="img/one-click.svg" alt="one-click">
+                     <h3>1-Click App Marketplace</h3>
+                     <p>Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.</p>
+                    </div>
+
+                 </div>
+                 <div class="col-md-6">
+                   <div class="">
+                     <img src="img/global.svg" alt="global">
+                     <h3>Global availability</h3>
+                     <p>Deploy to any of our data center regions around the world.</p>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+
+
     </main>
 
   </body>
