--- a/index.html
+++ b/index.html
@@ -179,80 +179,153 @@
 
 
       <!-- main section 2 -->
-       <div class="">
-         <div class="container">
-           <div class="row">
-             <div class="col-xs-12">
-               <div class="text-title-section2">
-                 <h2>Deploy and scale seamlessly</h2>
-                 <p>Our optimized configuration process saves your team time when running and scaling distributed applications, Al & machine learning workloads, hosted services, client websites, or CI/CD enviroments.</p>
+      <div class="">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="text-title-section2">
+                <h2>Deploy and scale seamlessly</h2>
+                <p>Our optimized configuration process saves your team time when running and scaling distributed applications, Al & machine learning workloads, hosted services, client websites, or CI/CD enviroments.</p>
 
-               </div>
-             </div>
-           </div>
-         </div>
-       </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-       <div class="text-under-section2">
-         <div class="container">
-           <div class="row">
-             <div class=" col-xs-12 col-md-offset-1 col-md-3 ">
-               <div class="listato">
-                 <ul>
-                   <li><a href="#">Deploy</a></li>
-                   <li><a href="#">Manage</a></li>
-                   <li><a href="#">Secure</a></li>
-                   <li><a href="#">Scale</a></li>
-                   <li><a href="#">Monitor</a></li>
-                 </ul>
+      <div class="text-under-section2">
+        <div class="container">
+          <div class="row">
+            <div class=" col-xs-12 col-md-offset-1 col-md-3 ">
+              <div class="listato">
+                <ul>
+                  <li><a href="#">Deploy</a></li>
+                  <li><a href="#">Manage</a></li>
+                  <li><a href="#">Secure</a></li>
+                  <li><a href="#">Scale</a></li>
+                  <li><a href="#">Monitor</a></li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-xs-12 col-md-4">
+               <div class="">
+                 <img src="img/cluster-deploy.svg" alt="cluster">
+                 <h3>Cluster deployments</h3>
+                 <p>Provision multiple Droplets(virtual machines) in seconds with our control panel, CLI, or directly against our API</p>
                </div>
              </div>
 
              <div class="col-xs-12 col-md-4">
-                <div class="">
-                  <img src="img/cluster-deploy.svg" alt="cluster">
-                  <h3>Cluster deployments</h3>
-                  <p>Provision multiple Droplets(virtual machines) in seconds with our control panel, CLI, or directly against our API</p>
-                </div>
-              </div>
-
-              <div class="col-xs-12 col-md-4">
-                <div class="">
-                  <img src="img/optimized-compute.svg" alt="compute">
-                  <h3>Flexible compute types</h3>
-                  <p>With Basic, General Purpose, CPU-Optimized or Memory-Optimized Droplets, you can choose the right infrastructure for your workload.</p>
-                </div>
-              </div>
-           </div>
-
-
-           <div class="row">
-             <div class="col-xs-12 col-md-offset-4 col-md-4">
                <div class="">
-                 <img src="img/one-click.svg" alt="one-click">
-                 <h3>1-Click App Marketplace</h3>
-                 <p>Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.</p>
+                 <img src="img/optimized-compute.svg" alt="compute">
+                 <h3>Flexible compute types</h3>
+                 <p>With Basic, General Purpose, CPU-Optimized or Memory-Optimized Droplets, you can choose the right infrastructure for your workload.</p>
+               </div>
+             </div>
+          </div>
+
+
+          <div class="row">
+            <div class="col-xs-12 col-md-offset-4 col-md-4">
+              <div class="">
+                <img src="img/one-click.svg" alt="one-click">
+                <h3>1-Click App Marketplace</h3>
+                <p>Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.</p>
+               </div>
+             </div>
+
+             <div class="col-xs-12 col-md-4">
+               <div class="">
+                 <img src="img/global.svg" alt="global">
+                 <h3>Global availability</h3>
+                 <p>Deploy to any of our data center regions around the world.</p>
+               </div>
+             </div>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- main section3 -->
+
+      <div class="contenitore-section3">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="text-title-section3">
+                <h1>Designed for developers</h1>
+                <p>Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="img-undertitle-section3">
+
+
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                  <!-- Indicators -->
+                  <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                  </ol>
+
+                  <!-- Wrapper for slides -->
+                  <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                      <img src="img/screenshot-create-droplet-12336b41.jpg" alt="...">
+                      <div class="carousel-caption">
+                        ...
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="img/screenshot-create-droplet-12336b41.jpg" alt="...">
+                      <div class="carousel-caption">
+                        ...
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="img/screenshot-create-droplet-12336b41.jpg" alt="...">
+                      <div class="carousel-caption">
+                        ...
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="img/screenshot-create-droplet-12336b41.jpg" alt="...">
+                      <div class="carousel-caption">
+                        ...
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Controls -->
+                  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
                 </div>
+
+
+
               </div>
 
-              <div class="col-xs-12 col-md-4">
-                <div class="">
-                  <img src="img/global.svg" alt="global">
-                  <h3>Global availability</h3>
-                  <p>Deploy to any of our data center regions around the world.</p>
-                </div>
-              </div>
-           </div>
+            </div>
 
+          </div>
 
+        </div>
+      </div>
 
-
-
-
-
-           </div>
-         </div>
-       </div>
 
 
     </main>
