--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
                     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                   </ol>
 
                   <!-- Wrapper for slides -->
@@ -281,13 +282,14 @@
                     <div class="item active">
                       <img src="img/screenshot-create-droplet-12336b41.jpg" alt="...">
                       <div class="carousel-caption">
-                        ...
+
+
                       </div>
                     </div>
                     <div class="item">
                       <img src="img/screenshot-create-droplet-12336b41.jpg" alt="...">
                       <div class="carousel-caption">
-                        ...
+
                       </div>
                     </div>
                     <div class="item">
@@ -314,16 +316,25 @@
                     <span class="sr-only">Next</span>
                   </a>
                 </div>
-
-
-
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="contenitore-section3">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <h3>Create compute servers in 55 seconds or less.</h3>
 
             </div>
+
 
           </div>
 
         </div>
+
       </div>
 
 
