--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
 
             </div>
             <div class="col-xs-6 col-md-2">
-              <img src="img/hashicorp.svg" alt="hashicorp">
+              <img  src="img/hashicorp.svg" alt="hashicorp">
 
             </div>
             <div class="col-xs-6 col-md-2">
-              <img src="img/hashicorp.svg" alt="hashicorp">
+              <img  src="img/hashicorp.svg" alt="hashicorp">
 
             </div>
             <div class="col-xs-6 col-md-2">
@@ -209,7 +209,7 @@
             </div>
 
             <div class="col-xs-12 col-md-4">
-               <div class="">
+               <div class="cluster-compute">
                  <img src="img/cluster-deploy.svg" alt="cluster">
                  <h3>Cluster deployments</h3>
                  <p>Provision multiple Droplets(virtual machines) in seconds with our control panel, CLI, or directly against our API</p>
@@ -217,7 +217,7 @@
              </div>
 
              <div class="col-xs-12 col-md-4">
-               <div class="">
+               <div class="cluster-compute">
                  <img src="img/optimized-compute.svg" alt="compute">
                  <h3>Flexible compute types</h3>
                  <p>With Basic, General Purpose, CPU-Optimized or Memory-Optimized Droplets, you can choose the right infrastructure for your workload.</p>
@@ -329,7 +329,44 @@
               <h3>Create compute servers in 55 seconds or less.</h3>
 
             </div>
+          </div>
+        </div>
+      </div>
 
+      <!-- main section4 -->
+      <div class="text-title-mainsection4">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <h1>The features your business needs</h1>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-4">
+              <img src="img/pred-pricing.svg" alt="pred-pricing">
+              <h3>Predictable pricing</h3>
+              <p>Leave complex pricing structures behind. Always know what you’ll pay per month with a flat, industry-leading pricing structure.</p>
+              <a href="#">Pricing ></a>
+
+            </div>
+            <div class="col-xs-12 col-md-4">
+              <img src="img/world-class.svg" alt="world-class">
+              <h3>World-class service</h3>
+              <p>Free around-the-clock technical support for all customers, with additional benefits for premium support subscribers. You’ll feel the love.</p>
+              <a href="#">Support ></a>
+
+            </div>
+            <div class="col-xs-12 col-md-4">
+              <img src="img/reliable-platform.svg" alt="reliable-platform">
+              <h3>Reliable platform</h3>
+              <p>More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
+              <a href="#">Security ></a>
+
+            </div>
 
           </div>
 
