--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
           <div class="row">
             <div class="col-xs-12 col-md-offset-4 col-md-4">
-              <div class="">
+              <div class="click-global">
                 <img src="img/one-click.svg" alt="one-click">
                 <h3>1-Click App Marketplace</h3>
                 <p>Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.</p>
@@ -236,7 +236,7 @@
              </div>
 
              <div class="col-xs-12 col-md-4">
-               <div class="">
+               <div class="click-global">
                  <img src="img/global.svg" alt="global">
                  <h3>Global availability</h3>
                  <p>Deploy to any of our data center regions around the world.</p>
