--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   <button type="button" class="btn btn-primary btn-lg btn-block">Create your account</button>
                   <button type="button" class="btn btn-default btn-lg btn-block"><img src="img/google-icon.png" alt="gogle">Sign up with google</button>
                 </div>
-                <p>By signing up you agree to the <a href="#">Terms of service</a></p>
+                <p class="terms-of-service">By signing up you agree to the <a href="#">Terms of service</a></p>
               </div>
             </div>
           </div>
@@ -147,15 +147,16 @@
 
             </div>
             <div class="col-xs-6 col-md-2">
-              <img src="img/slack.svg" alt="slack">
+              <img  src="img/slack.svg" alt="slack">
 
             </div>
             <div class="col-xs-6 col-md-2">
-              <img  src="img/hashicorp.svg" alt="hashicorp">
+
+              <img class="hashicorp" src="img/hashicorp.svg" alt="hashicorp">
 
             </div>
             <div class="col-xs-6 col-md-2">
-              <img  src="img/hashicorp.svg" alt="hashicorp">
+              <img class="hashicorp"   src="img/hashicorp.svg" alt="hashicorp">
 
             </div>
             <div class="col-xs-6 col-md-2">
