--- a/index.html
+++ b/index.html
@@ -362,13 +362,104 @@
               <h3>Reliable platform</h3>
               <p>More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
               <a href="#">Security ></a>
+            </div>
+          </div>
+        </div>
+      </div>
 
+
+      <!-- main section5 -->
+      <div class="title-mainsection5">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="">
+                <h1>Service your customer around the world from 12 regions</h1>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="table">
+        <div class="container">
+          <div class="row">
+            <!-- table-left -->
+            <div class="col-xs-12 col-md-6">
+              <table style="width:100%">
+                <tr class="text-table">
+                  <td>AMS2</td>
+                  <td>Amsterdam,Netherlands</td>
+                  <td><a href="#">Test speed ></a></td>
+                </tr>
+                <tr class="text-table">
+                  <td>AMS2</td>
+                  <td>Amsterdam,Netherlands</td>
+                  <td><a href="#">Test speed ></a></td>
+                </tr>
+                <tr class="text-table">
+                  <td>AMS2</td>
+                  <td>Amsterdam,Netherlands</td>
+                  <td><a href="#">Test speed ></a></td>
+                </tr>
+                <tr class="text-table">
+                  <td>AMS2</td>
+                  <td>Amsterdam,Netherlands</td>
+                  <td><a href="#">Test speed ></a></td>
+                </tr>
+                <tr class="text-table">
+                  <td>AMS2</td>
+                  <td>Amsterdam,Netherlands</td>
+                  <td><a href="#">Test speed ></a></td>
+                </tr>
+                <tr class="text-table">
+                  <td>AMS2</td>
+                  <td>Amsterdam,Netherlands</td>
+                  <td><a href="#">Test speed ></a></td>
+                </tr>
+              </table>
             </div>
 
+            <!-- table-right -->
+            <div class="col-xs-12 col-md-6">
+              <table style="width:100%">
+                <tr class="text-table">
+                  <td>AMS2</td>
+                  <td>Amsterdam,Netherlands</td>
+                  <td><a href="#">Test speed ></a></td>
+                </tr>
+                <tr class="text-table">
+                  <td>AMS2</td>
+                  <td>Amsterdam,Netherlands</td>
+                  <td><a href="#">Test speed ></a></td>
+                </tr>
+                <tr class="text-table">
+                  <td>AMS2</td>
+                  <td>Amsterdam,Netherlands</td>
+                  <td><a href="#">Test speed ></a></td>
+                </tr>
+                <tr class="text-table">
+                  <td>AMS2</td>
+                  <td>Amsterdam,Netherlands</td>
+                  <td><a href="#">Test speed ></a></td>
+                </tr>
+                <tr class="text-table">
+                  <td>AMS2</td>
+                  <td>Amsterdam,Netherlands</td>
+                  <td><a href="#">Test speed ></a></td>
+                </tr>
+                <tr class="text-table">
+                  <td>AMS2</td>
+                  <td>Amsterdam,Netherlands</td>
+                  <td><a href="#">Test speed ></a></td>
+                </tr>
+              </table>
+            </div>
+
+
           </div>
-
         </div>
-
       </div>
 
 
