--- a/index.html
+++ b/index.html
@@ -268,15 +268,12 @@
             <div class="col-xs-12">
               <div class="img-undertitle-section3">
 
-
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+               <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                   <!-- Wrapper for slides -->
                   <div class="carousel-inner" role="listbox">
                     <div class="item active">
                       <img src="img/screenshot-create-droplet-12336b41.jpg" alt="...">
                       <div class="carousel-caption">
-
-
                       </div>
                     </div>
                     <div class="item">
@@ -320,7 +317,7 @@
                       <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                       <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                       <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                      <li data-target="#carousel-example-generic" data-slide-to="3"></li>
                     </ol>
                   </div>
                 </div>
@@ -369,11 +366,11 @@
 
 
       <!-- main section5 -->
-      <div class="title-mainsection5">
+      <div class="contenitore-mainsection5">
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-              <div class="">
+              <div class="title-mainsection5 ">
                 <h1>Service your customer around the world from 12 regions</h1>
 
               </div>
@@ -456,12 +453,76 @@
                 </tr>
               </table>
             </div>
-
-
           </div>
         </div>
       </div>
 
+
+      <!-- main section6 -->
+      <div class="contenitore-mainsection6">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="title-mainsection6">
+                <h1>Development teams love DigitalOcean</h1>
+
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="img-rockerbox">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                  <!-- Wrapper for slides -->
+                  <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                      <a href="#"><img src="img/rockerbox.png" alt="rockerbox"></a>
+                      <div class="carousel-caption">
+                      </div>
+                    </div>
+                    <div class="item">
+                      <a href="#"><img src="img/rockerbox.png" alt="rockerbox"></a>
+                      <div class="carousel-caption">
+
+                      </div>
+                    </div>
+                    <div class="item">
+                      <div class="carousel-caption">
+                        ...
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Controls -->
+                  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+
+                  <!-- Indicators -->
+                  <div class="col-xs-12" >
+                    <ol class="carousel-indicators">
+                      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
+                  </div>
+                 </div>
+
+              </div>
+
+
+
+            </div>
+
+          </div>
+        </div>
+      </div>
 
 
     </main>
