--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- main -->
     <main>
 
-      <!-- main section1 -->
+      <!-- main section 1 "INNOVATIVE BUSINESSES" -->
       <div class="contenitore-main-section1">
         <div class="container">
           <div class="row">
@@ -179,7 +179,7 @@
       </div>
 
 
-      <!-- main section 2 -->
+      <!-- main section 2 "DEPLOY" -->
       <div class="">
         <div class="container">
           <div class="row">
@@ -248,7 +248,7 @@
       </div>
 
 
-      <!-- main section3 -->
+      <!-- main section 3 "DESIGNED" -->
 
       <div class="contenitore-section3">
         <div class="container">
@@ -327,7 +327,7 @@
         </div>
       </div>
 
-      <!-- main section4 -->
+      <!-- main section 4 "THE FEATURES" -->
       <div class="text-title-mainsection4">
         <div class="container">
           <div class="row">
@@ -365,7 +365,7 @@
       </div>
 
 
-      <!-- main section5 -->
+      <!--main section 5 "SERVICE TABLE" -->
       <div class="contenitore-mainsection5">
         <div class="container">
           <div class="row">
@@ -458,7 +458,7 @@
       </div>
 
 
-      <!-- main section6 -->
+      <!-- main section 6 "DEVELOPMENT TEAMS"-->
       <div class="contenitore-mainsection6">
         <div class="container">
           <div class="row">
@@ -488,6 +488,7 @@
                       </div>
                     </div>
                     <div class="item">
+                      <a href="#"><img src="img/rockerbox.png" alt="rockerbox"></a>
                       <div class="carousel-caption">
                         ...
                       </div>
@@ -512,19 +513,27 @@
                       <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                     </ol>
                   </div>
-                 </div>
-
+                </div>
               </div>
-
-
-
             </div>
-
           </div>
         </div>
       </div>
 
+      <!-- main section 7 "CreateyourAccount" -->
+      <div class="contenitore-mainsection7">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="title-button">
+                <h1>Get started now.</h1>
+                <p><button type="button" class="btn btn-primary btn-lg">Create your account</button></p>
+              </div>
 
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
   </body>
