Correzione Button "Create your account"

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
             <div class="col-xs-12">
               <div class="title-button">
                 <h1>Get started now.</h1>
-                <p><button type="button" class="btn btn-primary btn-lg">Create your account</button></p>
+                <p><button type="button" class="btn btn-primary-2 btn-lg">Create your account</button></p>
               </div>
 
             </div>
