--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <div class="text-under-section2">
         <div class="container">
           <div class="row">
-            <div class=" col-xs-12 col-md-offset-1 col-md-3 ">
+            <div class=" col-xs-12 col-md-offset-1 col-md-2 ">
               <div class="listato">
                 <ul>
                   <li><a href="#">Deploy</a></li>
@@ -209,41 +209,46 @@
               </div>
             </div>
 
-            <div class="col-xs-12 col-md-4">
-               <div class="cluster-compute">
-                 <img src="img/cluster-deploy.svg" alt="cluster">
-                 <h3>Cluster deployments</h3>
-                 <p>Provision multiple Droplets(virtual machines) in seconds with our control panel, CLI, or directly against our API</p>
+           <div class="col-xs-12 col-md-9">
+             <div class="row">
+               <div class="col-xs-12  col-md-6">
+                  <div class="cluster-compute">
+                    <img src="img/cluster-deploy.svg" alt="cluster">
+                    <h3>Cluster deployments</h3>
+                    <p>Provision multiple Droplets(virtual machines) in seconds with our control panel, CLI, or directly against our API</p>
+                  </div>
                </div>
+
+                <div class="col-xs-12 col-md-6">
+                  <div class="cluster-compute">
+                    <img src="img/optimized-compute.svg" alt="compute">
+                    <h3>Flexible compute types</h3>
+                    <p>With Basic, General Purpose, CPU-Optimized or Memory-Optimized Droplets, you can choose the right infrastructure for your workload.</p>
+                  </div>
+                </div>
              </div>
 
-             <div class="col-xs-12 col-md-4">
-               <div class="cluster-compute">
-                 <img src="img/optimized-compute.svg" alt="compute">
-                 <h3>Flexible compute types</h3>
-                 <p>With Basic, General Purpose, CPU-Optimized or Memory-Optimized Droplets, you can choose the right infrastructure for your workload.</p>
-               </div>
-             </div>
-          </div>
 
+             <div class="row">
+               <div class="col-xs-12 col-md-6">
+                 <div class="click-global">
+                   <img src="img/one-click.svg" alt="one-click">
+                   <h3>1-Click App Marketplace</h3>
+                   <p>Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.</p>
+                  </div>
+                </div>
 
-          <div class="row">
-            <div class="col-xs-12 col-md-offset-4 col-md-4">
-              <div class="click-global">
-                <img src="img/one-click.svg" alt="one-click">
-                <h3>1-Click App Marketplace</h3>
-                <p>Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.</p>
-               </div>
-             </div>
+                <div class="col-xs-12 col-md-6">
+                  <div class="click-global">
+                    <img src="img/global.svg" alt="global">
+                    <h3>Global availability</h3>
+                    <p>Deploy to any of our data center regions around the world.</p>
+                  </div>
+                </div>
 
-             <div class="col-xs-12 col-md-4">
-               <div class="click-global">
-                 <img src="img/global.svg" alt="global">
-                 <h3>Global availability</h3>
-                 <p>Deploy to any of our data center regions around the world.</p>
-               </div>
              </div>
-          </div>
+           </div>
+         </div>
         </div>
       </div>
 
@@ -391,28 +396,28 @@
                   <td><a href="#">Test speed ></a></td>
                 </tr>
                 <tr class="text-table">
-                  <td>AMS2</td>
+                  <td>AMS3</td>
                   <td>Amsterdam,Netherlands</td>
                   <td><a href="#">Test speed ></a></td>
                 </tr>
                 <tr class="text-table">
-                  <td>AMS2</td>
-                  <td>Amsterdam,Netherlands</td>
+                  <td>BLR1</td>
+                  <td>Bangalore,India</td>
                   <td><a href="#">Test speed ></a></td>
                 </tr>
                 <tr class="text-table">
-                  <td>AMS2</td>
-                  <td>Amsterdam,Netherlands</td>
+                  <td>FRA1</td>
+                  <td>Frankfurt,German</td>
                   <td><a href="#">Test speed ></a></td>
                 </tr>
                 <tr class="text-table">
-                  <td>AMS2</td>
-                  <td>Amsterdam,Netherlands</td>
+                  <td>LON1</td>
+                  <td>London,UK</td>
                   <td><a href="#">Test speed ></a></td>
                 </tr>
                 <tr class="text-table">
-                  <td>AMS2</td>
-                  <td>Amsterdam,Netherlands</td>
+                  <td>NYC1</td>
+                  <td>New York, USA</td>
                   <td><a href="#">Test speed ></a></td>
                 </tr>
               </table>
@@ -427,28 +432,28 @@
                   <td><a href="#">Test speed ></a></td>
                 </tr>
                 <tr class="text-table">
-                  <td>AMS2</td>
+                  <td>AMS3</td>
                   <td>Amsterdam,Netherlands</td>
                   <td><a href="#">Test speed ></a></td>
                 </tr>
                 <tr class="text-table">
-                  <td>AMS2</td>
-                  <td>Amsterdam,Netherlands</td>
+                  <td>BLR1</td>
+                  <td>Bangalore,India</td>
                   <td><a href="#">Test speed ></a></td>
                 </tr>
                 <tr class="text-table">
-                  <td>AMS2</td>
-                  <td>Amsterdam,Netherlands</td>
+                  <td>FRA1</td>
+                  <td>Frankfurt,German</td>
                   <td><a href="#">Test speed ></a></td>
                 </tr>
                 <tr class="text-table">
-                  <td>AMS2</td>
-                  <td>Amsterdam,Netherlands</td>
+                  <td>LON1</td>
+                  <td>London,UK</td>
                   <td><a href="#">Test speed ></a></td>
                 </tr>
                 <tr class="text-table">
-                  <td>AMS2</td>
-                  <td>Amsterdam,Netherlands</td>
+                  <td>NYC1</td>
+                  <td>New York, USA</td>
                   <td><a href="#">Test speed ></a></td>
                 </tr>
               </table>
@@ -535,6 +540,11 @@
         </div>
       </div>
     </main>
+
+    <!-- footer -->
+    <div class="">
+
+    </div>
 
   </body>
 </html>
