--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
     <title>prova di selettori avanzati</title>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"> -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -92,7 +92,7 @@
             <div class="col-xs-12 col-md-6">
               <div class="text-left-jumbotron design">
                 <h1>The simplest cloud paltform fort developers & teams</h1>
-                <p>We make it simple to launch in the cloud and scale up as you grow â€“ with an intuitive control panel, predictable pricing, team accounts, and more.We make it simple to launch in the cloud and scale up as you grow â€“ with an intuitive control panel, predictable pricing, team accounts, and more.</p>
+                <p>We make it simple to launch in the cloud and scale up as you grow – with an intuitive control panel, predictable pricing, team accounts, and more.We make it simple to launch in the cloud and scale up as you grow – with an intuitive control panel, predictable pricing, team accounts, and more.</p>
 
               </div>
             </div>
@@ -239,7 +239,7 @@
                 </div>
 
                 <div class="col-xs-12 col-md-6">
-                  <div class="click-global">
+                  <div class="click-global only-global">
                     <img src="img/global.svg" alt="global">
                     <h3>Global availability</h3>
                     <p>Deploy to any of our data center regions around the world.</p>
@@ -348,14 +348,14 @@
             <div class="col-xs-12 col-md-4">
               <img src="img/pred-pricing.svg" alt="pred-pricing">
               <h3>Predictable pricing</h3>
-              <p>Leave complex pricing structures behind. Always know what youâ€™ll pay per month with a flat, industry-leading pricing structure.</p>
+              <p>Leave complex pricing structures behind. Always know what you’ll pay per month with a flat, industry-leading pricing structure.</p>
               <a href="#">Pricing ></a>
 
             </div>
             <div class="col-xs-12 col-md-4">
               <img src="img/world-class.svg" alt="world-class">
               <h3>World-class service</h3>
-              <p>Free around-the-clock technical support for all customers, with additional benefits for premium support subscribers. Youâ€™ll feel the love.</p>
+              <p>Free around-the-clock technical support for all customers, with additional benefits for premium support subscribers. You’ll feel the love.</p>
               <a href="#">Support ></a>
 
             </div>
@@ -542,9 +542,194 @@
     </main>
 
     <!-- footer -->
-    <div class="">
+    <footer>
+      <div class="contenitore-footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-lg-4">
+              <div class="app">
+                <img src="img/logo-small.svg" alt="logo-small">
+                <p> <i class="far fa-copyright"></i>2018 DigitalOcean,LLC. All rights reserved.</p>
+                <p class="made-ny">Proudly made in NY</p>
+                <ul class="listato-app">
+                  <li>
+                    <a href="#"><i class="fab fa-twitter "></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fab fa-facebook-square"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
 
-    </div>
+
+            <div class="col-xs-12 col-lg-8">
+              <div class="row">
+
+                <!-- listao 1 -->
+                <div class="col-xs-12 col-md-6 col-lg-3">
+                  <div class="listato-footer">
+                    <ul>
+                      <li>
+                        <a class="first-child" href="#">Company</a>
+                      </li>
+                      <li>
+                        <a href="#">About</a>
+                      </li>
+                      <li>
+                        <a href="#">Leadership</a>
+                      </li>
+                      <li>
+                        <a href="#">Link</a>
+                      </li>
+                      <li>
+                        <a href="#">Blog</a>
+                      </li>
+                      <li>
+                        <a href="#">Careers</a>
+                      </li>
+                      <li>
+                        <a href="#">Partner Network</a>
+                      </li>
+                      <li>
+                        <a href="#">Referral Program</a>
+                      </li>
+                      <li>
+                        <a href="#">Events</a>
+                      </li>
+                      <li>
+                        <a href="#">Press</a>
+                      </li>
+                      <li>
+                        <a href="#">Legal & Security</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+
+                <!-- listato 2 -->
+                <div class="col-xs-12  col-md-6 col-lg-3">
+                  <div class="listato-footer">
+                    <ul>
+                      <li>
+                        <a class="first-child" href="#">Products</a>
+                      </li>
+                      <li>
+                        <a href="#">Droplets</a>
+                      </li>
+                      <li>
+                        <a href="#">Spaces</a>
+                      </li>
+                      <li>
+                        <a href="#">Kurbernetes</a>
+                      </li>
+                      <li>
+                        <a href="#">Load Balancer</a>
+                      </li>
+                      <li>
+                        <a href="#">Block Storage</a>
+                      </li>
+                      <li>
+                        <a href="#">Tools & Integrations</a>
+                      </li>
+                      <li>
+                        <a href="#">One-click Apps</a>
+                      </li>
+                      <li>
+                        <a href="#">Api</a>
+                      </li>
+                      <li>
+                        <a href="#">Pricing</a>
+                      </li>
+                      <li>
+                        <a href="#">Documentation</a>
+                      </li>
+                      <li>
+                        <a href="#">Release Notes</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+
+                <!-- listato 3 -->
+                <div class="col-xs-12  col-md-6  col-lg-3">
+                  <div class="listato-footer">
+                    <ul>
+                      <li>
+                        <a class="first-child" href="#">Community</a>
+                      </li>
+                      <li>
+                        <a href="#">Tutorials</a>
+                      </li>
+                      <li>
+                        <a href="#">Meetups</a>
+                      </li>
+                      <li>
+                        <a href="#">Q&A</a>
+                      </li>
+                      <li>
+                        <a href="#">Write for Donations</a>
+                      </li>
+                      <li>
+                        <a href="#">Droplets for Demos</a>
+                      </li>
+                      <li>
+                        <a href="#">Hatch</a>
+                      </li>
+                      <li>
+                        <a href="#">Shop Swag</a>
+                      </li>
+                      <li>
+                        <a href="#">Research Program</a>
+                      </li>
+                      <li>
+                        <a href="#">Currents Research</a>
+                      </li>
+                      <li>
+                        <a href="#">Open Source </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+
+                <!-- listato 4 -->
+                <div class="col-xs-12  col-md-6  col-lg-3">
+                  <div class="listato-footer">
+                    <ul>
+                      <li>
+                        <a class="first-child" href="#">Support</a>
+                      </li>
+                      <li>
+                        <a href="#">Contact support</a>
+                      </li>
+                      <li>
+                        <a href="#">FAQ</a>
+                      </li>
+                      <li>
+                        <a href="#">Network Status</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </footer>
+
 
   </body>
 </html>
